--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -5,6 +5,7 @@
 	-->
 
 <head>
+  <link rel="stylesheet" href="movie.css">
   <title>PIA HW - Movie review</title>
   <meta name="author" content="Emilija Miljojkovic" />
   <meta charset="utf-8" />
