--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -11,6 +11,10 @@
   <meta charset="utf-8" />
   <meta name="description" content="HTML/CSS homework assignment." />
   <meta name="keywords" content="pia, web programming, html, css" />
+  <style>
+    body {
+  background-image: url("images/background.png");}
+  </style>
 </head>
 
 <body>
