--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -131,7 +131,7 @@
   </p>
 
   <!-- sekcija sa informacijama: desna kolona. -->
-  <img src="file:///D:/ema/fax/web/domaci/incredibles.png" alt="general overview" />
+  <img src="images/incredibles.png" alt="general overview" />
   <dl>
     <dt>STARRING</dt>
     <dd>
