--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -19,11 +19,14 @@
   <img src="images/freshbig.png" alt="Rotten" />
   <span>97%</span>
 
+<div class="kritike">
+  
   <p class="quotebubble">
     <img src="images/rotten.gif" alt="Rotten" />
     <q>Bird and the Pixar whizzes do what they do excellently; 
       you just wish they were doing something else.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Eleanor Ringel Cater <br />
@@ -34,6 +37,7 @@
     <img src="images/fresh.gif" alt="Fresh" />
     <q>The sleek computer animation is spellbinding as usual.</q>
   </p>
+  
   <p>
     <img src="images/critic.gif" alt="Critic" />
     J. R. Jones <br />
@@ -45,6 +49,7 @@
     <q>The Incredibles announces the studio's arrival in the vast yet overcrowded 
       Hollywood lot of eardrum-bashing, metal-crunching action sludge.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
    Jessica Winter <br />
@@ -55,6 +60,7 @@
     <img src="images/fresh.gif" alt="Fresh" />
     <q>One of the year's most visually dazzling and emotionally satisfying adventures.</q>
   </p>
+  
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Lou Lumenick <br />
@@ -67,6 +73,7 @@
        for the way real bodies move through space, that it has more ontological
        authenticity than a lot of films featuring people who actually exist.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
     David Edelstein <br />
@@ -78,6 +85,7 @@
     <q>Bird's intricate, colorful and super-kinetic action is a cyber equivalent 
        of eye candy. It's also loaded with empty calories.</q>
   </p>
+  
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Thomas Delapa<br />
@@ -90,6 +98,7 @@
        film even more appealing is the smartness of the script, which is clearly 
        written, end to end, to appeal to adults as well as children.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Jennifer Frey <br />
@@ -101,7 +110,7 @@
     <q>A spirited state-of-the-art riff on vintage James Bond movies 
        and the superhero ethos of the 1950s and '60s.</q>
   </p>
-
+  
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Roger Moore <br />
@@ -113,6 +122,7 @@
     <q>A standard issue superhero adventure? Probably not the most original
        thought that's ever crossed (Pixar's) collective minds.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Sean O'Connell <br />
@@ -124,11 +134,14 @@
     <q>The Incredibles promotes a new moral slogan for our times:
        The family that fights evil-doers together stays together.</q>
   </p>
+
   <p>
     <img src="images/critic.gif" alt="Critic" />
     Frederic and Mary Ann Brussat <br />
     <span class="publication">Spirituality & Practice</span>
   </p>
+</div>
+  
 
   <!-- sekcija sa informacijama: desna kolona. -->
   <img src="images/incredibles.png" alt="general overview" />
