--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -21,124 +21,126 @@
 
 <div class="kritike">
   
-  <p class="quotebubble">
-    <img src="images/rotten.gif" alt="Rotten" />
-    <q>Bird and the Pixar whizzes do what they do excellently; 
-      you just wish they were doing something else.</q>
-  </p>
-
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Eleanor Ringel Cater <br />
-    <span class="publication">Atlanta Journal-Constitution</span>
-  </p>
-
-  <p class="quotebubble">
-    <img src="images/fresh.gif" alt="Fresh" />
-    <q>The sleek computer animation is spellbinding as usual.</q>
-  </p>
+ 
+  <div class="quotebubble">
+    <img class="tomato" src="images/rotten.gif" alt="Rotten" />
+    <p class="text">Bird and the Pixar whizzes do what they do excellently; 
+      you just wish they were doing something else.</p>
+  </div>
   
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    J. R. Jones <br />
-    <span class="publication">Chicago Reader</span>
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Ringel Cater<br />
+      <i>Atlanta Journal-Constitution</i></span>
   </p>
 
-  <p class="quotebubble">
-    <img src="images/rotten.gif" alt="Rotten" />
-    <q>The Incredibles announces the studio's arrival in the vast yet overcrowded 
-      Hollywood lot of eardrum-bashing, metal-crunching action sludge.</q>
-  </p>
-
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-   Jessica Winter <br />
-    <span class="publication">Village Voice</span>
-  </p>
-
-  <p class="quotebubble">
-    <img src="images/fresh.gif" alt="Fresh" />
-    <q>One of the year's most visually dazzling and emotionally satisfying adventures.</q>
-  </p>
+  <div class="quotebubble">
+    <img class="tomato" src="images/fresh.gif" alt="Fresh" />
+    <p class="text">The sleek computer animation is spellbinding as usual.</p>
+  </div>
   
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Lou Lumenick <br />
-    <span class="publication">New York Post</span>
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">J. R. Jones<br />
+      <i>Chicago Reader</i></span>
   </p>
 
-  <p class="quotebubble">
-    <img src="images/fresh.gif" alt="Fresh" />
-    <q>Made with so much wit, such cinematic savvy, and such a brilliant instinct
+  <div class="quotebubble">
+    <img class="tomato" src="images/rotten.gif" alt="Rotten" />
+    <p class="text">The Incredibles announces the studio's arrival in the vast yet overcrowded 
+      Hollywood lot of eardrum-bashing, metal-crunching action sludge.</p>
+  </div>
+
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Jessica Winter<br />
+      <i>Village Voice</i></span>
+  </p>
+
+  <div class="quotebubble">
+    <img class="tomato" src="images/fresh.gif" alt="Fresh" />
+    <p class="text">One of the year's most visually dazzling and 
+      emotionally satisfying adventures.</p>
+  </div>
+  
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Lou Lumenick<br />
+      <i>New York Post</i></span>
+  </p>
+
+  <div class="quotebubble">
+    <img class="tomato" src="images/fresh.gif" alt="Fresh" />
+    <p class="text">Made with so much wit, such cinematic savvy, and such a brilliant instinct
        for the way real bodies move through space, that it has more ontological
-       authenticity than a lot of films featuring people who actually exist.</q>
+       authenticity than a lot of films featuring people who actually exist.</p>
+  </div>
+
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">David Edelstein<br />
+      <i>Slate</i></span>
   </p>
 
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    David Edelstein <br />
-    <span class="publication">Slate</span>
-  </p>
-
-  <p class="quotebubble">
-    <img src="images/rotten.gif" alt="Rotten" />
-    <q>Bird's intricate, colorful and super-kinetic action is a cyber equivalent 
-       of eye candy. It's also loaded with empty calories.</q>
-  </p>
+  <div class="quotebubble">
+    <img class="tomato" src="images/rotten.gif" alt="Rotten" />
+    <p class="text">Bird's intricate, colorful and super-kinetic action is a cyber equivalent 
+       of eye candy. It's also loaded with empty calories.</p>
+  </div>
   
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Thomas Delapa<br />
-    <span class="publication">Boulder Weekly</span>
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Thomas Delapa<br />
+      <i>Boulder Weekly</i></span>
   </p>
 
-  <p class="quotebubble">
-    <img src="images/fresh.gif" alt="Fresh" />
-    <q>As always, Pixar excels with its animation, but what makes this family
+  <div class="quotebubble">
+    <img class="tomato" src="images/fresh.gif" alt="Fresh" />
+    <p class="text">As always, Pixar excels with its animation, but what makes this family
        film even more appealing is the smartness of the script, which is clearly 
-       written, end to end, to appeal to adults as well as children.</q>
+       written, end to end, to appeal to adults as well as children.</p>
+  </div>
+
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Jennifer Frey<br />
+      <i>Washington Post</i></span>
   </p>
 
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Jennifer Frey <br />
-    <span class="publication">Washington Post</span>
-  </p>
-
-  <p class="quotebubble">
-    <img src="images/fresh.gif" alt="Fresh" />
-    <q>A spirited state-of-the-art riff on vintage James Bond movies 
-       and the superhero ethos of the 1950s and '60s.</q>
-  </p>
+  <div class="quotebubble">
+    <img class="tomato" src="images/fresh.gif" alt="Fresh" />
+    <p class="text">A spirited state-of-the-art riff on vintage James Bond movies 
+       and the superhero ethos of the 1950s and '60s.</p>
+  </div>
   
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Roger Moore <br />
-    <span class="publication">Orlando Sentinel</span>
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Roger Moore<br />
+      <i>Orlando Sentinel</i></span>
   </p>
 
-  <p class="quotebubble">
-    <img src="images/rotten.gif" alt="Rotten" />
-    <q>A standard issue superhero adventure? Probably not the most original
-       thought that's ever crossed (Pixar's) collective minds.</q>
+  <div class="quotebubble">
+    <img class="tomato" src="images/rotten.gif" alt="Rotten" />
+    <p class="text">A standard issue superhero adventure? Probably not the most original
+       thought that's ever crossed (Pixar's) collective minds.</p>
+  </div>
+
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Sean O'Connell<br />
+      <i>Eclipse Magazine</i></span>
   </p>
 
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Sean O'Connell <br />
-    <span class="publication">Eclipse Magazine</span>
-  </p>
+  <div class="quotebubble">
+    <img class="tomato" src="images/rotten.gif" alt="Rotten" />
+    <p class="text">The Incredibles promotes a new moral slogan for our times:
+       The family that fights evil-doers together stays together.</p>
+  </div>
 
-  <p class="quotebubble">
-    <img src="images/rotten.gif" alt="Rotten" />
-    <q>The Incredibles promotes a new moral slogan for our times:
-       The family that fights evil-doers together stays together.</q>
-  </p>
-
-  <p>
-    <img src="images/critic.gif" alt="Critic" />
-    Frederic and Mary Ann Brussat <br />
-    <span class="publication">Spirituality & Practice</span>
+  <p class="podaci">
+    <img class="kriticar" src="images/critic.gif" alt="Critic" />
+    <span class="publication">Frederic and Mary Ann Brussat<br />
+      <i>Spirituality & Practice</i></span>
   </p>
 </div>
   
