--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -14,10 +14,14 @@
 </head>
 
 <body>
+
   <h1>The Incredibles (2004)</h1>
 
-  <img src="images/freshbig.png" alt="Rotten" />
+<h2>
+  <img id="paradajz" src="images/freshbig.png" alt="Rotten" />
   <span>97%</span>
+</h2>
+
 
 <div class="kritike">
   
