--- a/hw-1/movie_index.html
+++ b/hw-1/movie_index.html
@@ -17,14 +17,14 @@
 
   <h1>The Incredibles (2004)</h1>
 
-<h2>
-  <img id="paradajz" src="images/freshbig.png" alt="Rotten" />
-  <span>97%</span>
-</h2>
 
-
-<div class="kritike">
+<div class="row">
+ <div class="column levo">
   
+  <h2 class="header">
+    <img id="paradajz" src="images/freshbig.png" alt="Rotten" />
+    <span>97%</span>
+  </h2>
  
   <div class="quotebubble">
     <img class="tomato" src="images/rotten.gif" alt="Rotten" />
@@ -146,11 +146,17 @@
     <span class="publication">Frederic and Mary Ann Brussat<br />
       <i>Spirituality & Practice</i></span>
   </p>
-</div>
+ </div>
   
 
   <!-- sekcija sa informacijama: desna kolona. -->
-  <img src="images/incredibles.png" alt="general overview" />
+
+ <div class="column desno">
+
+  
+  <img id="poster" src="images/incredibles.png" alt="general overview" />
+  
+  <div class="lista">
   <dl>
     <dt>STARRING</dt>
     <dd>
@@ -196,8 +202,8 @@
     <dd>$261.4M</dd>
 
     <dt>LINKS</dt>
-    <dd>
-      <ul>
+    
+      <ul class="linkovi">
         <li>
           <a href="https://www.pixar.com/feature-films/the-incredibles">The Official The Incredibles Site</a>
         </li>
@@ -206,10 +212,13 @@
         </li>
         <li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
       </ul>
-    </dd>
+    
   </dl>
+  </div>
+ </div>
+</div>
 
-  <footer>(1-10) of 88</footer>
+<div class="footer">(1-10) of 88</div>
 
   <div id="w3c">
     <a href="images/validate-html.php"><img src="images/w3c-html.png" alt="Valid HTML5" /></a><br />
